# basic-flask

./: config.py  pyproject.toml
instance/: storage.db
migrations/versions/: 8b1a9ad9d979_.py
src/: __init__.py
src/controllers/: default.py
src/models/: tables.py
src/templates/: base.html  index.html  login.html
