[tool.poetry]
name = "basic-flask"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
install = "^1.3.5"
flask-wtf = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
